feat: :sparkles: 实现自定义协议，请求头中使用定长部分和可变部分